force-app/main/default/objects/pse__Budget__c/fields/Exclude_Resource_Update__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Resource_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Resource Update</label>
    <type>Checkbox</type>
</CustomField>