force-app/main/default/objects/pse__Budget__c/fields/Financial_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Financial_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Reconciliation</label>
    <type>Checkbox</type>
</CustomField>