force-app/main/default/objects/pse__Budget__c/fields/NS_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>NS_Sales_Order__c</fullName>
    <label>NS Sales Order</label>
    <length>20</length>
    <type>Text</type>
</CustomField>