force-app/main/default/objects/pse__Budget__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>pse__Project__r.pse__Project_ID__c</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>