force-app/main/default/objects/pse__Budget__c/fields/Project_Setup_Config_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Setup_Config_Code__c</fullName>
    <label>Project Setup Config Code</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>