force-app/main/default/objects/pse__Budget__c/fields/Services_Hours_T_M__c.field-meta.xml
<CustomField>
    <fullName>Services_Hours_T_M__c</fullName>
    <label>Services Hours - T&amp;M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>