force-app/main/default/objects/pse__Budget__c/validationRules/Can_Only_Create_Blank_Budgets.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Only_Create_Blank_Budgets</fullName>
    <active>true</active>
    <description>Only allows the specified users to create budgets that are either blank or zero amounts.</description>
    <errorConditionFormula>AND(
  OR(
    $User.Id=&quot;005500000016Vt4&quot;,
    $User.Id=&quot;00550000002r5na&quot;
  ),
  OR(
    pse__PreBilledAmount__c!=NULL,
    pse__PreBilledAmount__c!=0,
    Services_Amount_Fixed_Fee__c!=NULL,
    Services_Amount_Fixed_Fee__c!=0,
    Services_Amount_T_M__c!=NULL,
    Services_Amount_T_M__c!=0
   )
)</errorConditionFormula>
    <errorMessage>Budget must have a blank or zero amount for all amount fields.</errorMessage>
</ValidationRule>