force-app/main/default/objects/pse__Budget__c/validationRules/Only_System_Administrators_Edit_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_System_Administrators_Edit_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT($Profile.Id = &apos;00e30000000bvR3&apos;),
  ISCHANGED(pse__Amount__c)
)</errorConditionFormula>
    <errorDisplayField>pse__Amount__c</errorDisplayField>
    <errorMessage>Please change the amount in the Bookings Section. The total Amount is a rollup of the fields.</errorMessage>
</ValidationRule>